# rustrooms

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  fly.toml
.github/workflows/: docker-publish.yml
src/: cluster.rs  main.rs  rnnoise_processor.js  rooms.rs  routes.rs  state.rs  web_assets.rs
src/assets/: app.css  index.html  inter.css  particles.js  tailwind-config.js
src/assets/client/: connection.js  core.js  interface.js  settings.js
