[package]
name = "rust_rooms"
version = "1.0.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48", features = ["full"] }
axum = { version = "0.8.7", features = ["ws"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.19", features = ["v4"] }
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
tracing = "0.1.43"
tracing-subscriber = "0.3"
futures = "0.3"
iroh = "0.95.1"
iroh-gossip = "0.95.0"
anyhow = "1.0.100"
blake3 = "1.8.3"

