[package]
name = "rust_rooms"
version = "1.0.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
axum = { version = "0.8.8", features = ["ws"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.21.0", features = ["v4"] }
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
futures = "0.3.32"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
mainline = "6"
sha1 = "0.10"

