[package]
name = "rust_rooms"
version = "1.0.0"
edition = "2024"
default-run = "rust_rooms"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
axum = { version = "0.8.8", features = ["ws"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.21.0", features = ["v4"] }
futures = "0.3.32"
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
mainline = "6"
sha1 = "0.10"
url = "2.5"


